# teaShellF

./: README.md  lesskey  symlinks.yml
bash/: bash_profile
dotfiles/: cookiecutter-config.yaml
dotfiles/bash/: bash_profile.sh  bashrc  gitprompt.sh  profile.sh
dotfiles/git/: config  ignore
dotfiles/git/identities/: private.conf  work.conf
dotfiles/kitty/: ssh.conf
dotfiles/python/: pythonrc  requirements-pipx.txt  startup.py
dotfiles/shell/: alias.sh  env.sh
dotfiles/wm/picom/: picom.conf
dotfiles/wm/polybar/: config  config.old.ini
dotfiles/wm/rofi/scripts/: app_launcher.sh
dotfiles/wm/xmonad/: xmonad.hi  xmonad.hs
dotfiles/zsh/: .zsh_plugins.zsh  completion.zsh  p10k.zsh  plugins.zsh  zshrc
dotfiles/zsh/local_plugins/aliases/: aliases.plugin.zsh
dotfiles/zsh/local_plugins/dirs/: dirs.plugin.zsh
dotfiles/zsh/local_plugins/functions/: functions.plugin.zsh
dotfiles/zsh/local_plugins/global_alias/: global_alias.plugin.zsh
dotfiles/zsh/local_plugins/zleditor/: zleditor.plugin.zsh
git/: config
kitty/: kitty.conf
python/: ptpython.config  ptpython.config.py  requirements.txt
shell/: functions.sh
targets/: base.yml  desktop.yml  nvim.yml
tea/: pyproject.toml
tea/src/tea/: __init__.py  cli.py  deploy.py  gitops.py  manifest.py  paths.py
teagarden/: scaffold.yml
tmux/: tmux.conf
vim/: vimrc
wm/gnome/: dconf
wm/polybar/: launch.sh
wm/rofi/scripts/: bluetooth.sh  switch_window.sh
wm/xmonad/: screenlayout.sh
zsh/: zsh  zshenv.zsh
zsh/local_plugins/history/: history.plugin.zsh
zsh/local_plugins/mise/: mise.plugin.zsh
